<resources>
    <string name="app_name">GithubAppCleanArch</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar_icon">Avatar Icon</string>
    <string name="temp_name">Fahmi Idris</string>
    <string name="temp_username">fahmiidris007</string>
    <string name="list_user_github">List User Github</string>
    <string name="not_found">Not Found</string>
    <string name="temp_company">IPB University\n</string>
    <string name="temp_location">Tangerang</string>
    <string name="temp_repository">999</string>
    <string name="repository">Repositories</string>
    <string name="temp_follower">999</string>
    <string name="followers">Folowers</string>
    <string name="temp_following">999</string>
    <string name="followings">Following</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="title_list_favorite">List Favorite</string>
</resources>